fix card title alignment

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ main {
 .indented-heading {
   background-color: hsl(45deg, 100%, 50%);
   max-width: fit-content;
-  padding: 8px 16px;
+  padding: 8px 24px;
   margin: 0;
   margin-left: -24px;
   border-bottom: 8px solid hsl(45deg, 100%, 40%);
